unirecppincludedir=$(includedir)/unirec++
unirecppinclude_HEADERS=bidirectionalInterface.hpp \
	inputInterface.hpp \
	ipAddress.hpp \
	macAddress.hpp \
	outputInterface.hpp \
	trapModuleInfo.hpp \
	unirecArray.hpp \
	unirecException.hpp \
	unirec.hpp \
	unirecRecord.hpp \
	unirecRecordView.hpp \
	unirecTypes.hpp \
	unirecTypeTraits.hpp \
	urTime.hpp


